Fix the broken css

--- a/ranked-choice-playground/src/components/ElectionNameGenerator/ElectionNameGenerator.module.css
+++ b/ranked-choice-playground/src/components/ElectionNameGenerator/ElectionNameGenerator.module.css
@@ -5,25 +5,25 @@
   font-size: 1.5em;
 }
 
-.spinner-container {
+.spinnerContainer {
   display: flex;
   justify-content: center;
   align-items: center;
   margin-bottom: 1em;
 }
 
-.combined-name {
+.combinedName {
   margin: 1em 0;
   font-size: 1.5em;
   text-align: center;
 }
 
-.styled-text-field {
+.styledTextField {
   width: 100px;
   margin-right: 10px;
 }
 
-.sentence-text {
+.sentenceText {
   font-size: 1.5em;
   margin: 0 10px;
 }
